# sahih

./: Cargo.toml  LICENSE.md  Makefile  README.md  codecov.yml
.github/workflows/: ci.yml
assets/: api-schema.json  sahih.json
fixtures/: api-schema.json  sahih.config.json
src/: config.rs  lib.rs  printer.rs  reader.rs
src/codegen/: codegen.rs  generator.rs  interface.rs  mod.rs  model.rs  validation.rs
