[package]
authors = ["Ginkoe <ginkoe@protonmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
description = "Toolings for making Fullstack easier"
keywords = ["cli", "terminal", "productivity", "git", "openapi", "swagger", "validation"]
name = "sahih"
version = "0.1.0"

documentation = "https://sahih.ginkoe.me/readme"
homepage = "https://sahih.ginkoe.me"
repository = "https://ginkoe.com/ginkoe/sahih"

exclude = [
  "assets/*",
  "tests/*",
  "scripts/*",
]

license = "MIT"
readme = "README.md"

edition = "2021"

[dependencies]
clap = {version = "3.0.0-rc.7"}
indexmap = "1.7.0"
log = "0.4.14"
openapiv3 = "0.5.0"
pretty_env_logger = "0.4"
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0"
termcolor = "1.1.2"
